# Audio2Text

./: .gitignore  README.md  initial_prompt.txt  pyproject.toml  requirements.txt  run.bat  run_output.txt  setup.bat
docs/: error_history.md  handoff.md  handover_20260322.md  status_report.md
src/: main.py
