[project]
name = "audio2text"
version = "0.1.0"
description = "音声データをテキストに変換するプロジェクト。"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # 今後必要になりそうなライブラリをここに追加
    # "openai",
    # "whisper",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
